# xf86-video-thead

./: .gitmodules  LICENSE  Makefile.am  README.md  configure.ac
conf/: thead.conf
debian/: changelog  control  rules  xserver-xorg-video-thead.install
etnadrm/: Makefile.am  etnadrm.c  etnaviv.c  etnaviv_dri3.c  etnaviv_drm.h  etnaviv_op.c  etnaviv_render.c
etnaviv/: Makefile.am
src/: Makefile.am  armada_accel.h  armada_bufmgr.c  armada_bufmgr.h  armada_drm.c  armada_drm.h  armada_module.c  common_drm.c  common_drm.h  common_drm_conn.c  common_present.c
